Bug fixes. Buttons behave more naturally. Navigation behavior change. Addition of information section styling. More attractive colors for events with contrasting text.

--- a/src/btn_toggle/btn_toggle.css
+++ b/src/btn_toggle/btn_toggle.css
@@ -13,7 +13,6 @@ Notes :
 .btn_wrapper {
   display:inline-block;
   vertical-align:text-bottom;
-  background-color:#ffffff;
   border:1px solid #ccc;
   border-radius:15px;
   height:22px;
